package and vercel

--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,17 +1,16 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ],
+  "builds": [
+    {
+      "src": "src/server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/src/server.js"
+    }
+  ],
     "env": {
       "MONGO_URI": "mongodb+srv://ayush_raina:THisIsTheGame@ayush.ijel0zd.mongodb.net/",
       "EMAIL_USER": "ayushraina617@gmail.com",
